--- a/extra/install/scripts/Makefile
+++ b/extra/install/scripts/Makefile
@@ -1,15 +1,8 @@
 # Makefile for extra/install/scripts directory
 
-CWD = scripts
-
 include ../../../makeopts
 
-#
-# install the contents of all subdirs under this one
-#
 install:
-	#$(INSTALL_PROGRAM) Mnetscape $(BINDIR)
-
-include ../../../makerules
+	#$(INSTALL_PROGRAM) .src/.Mnetscape $(BINDIR)
 
 .PHONY: install
