--- a/include/Makefile
+++ b/include/Makefile
@@ -1,49 +1,45 @@
 # Makefile for include directory
 
-CWD = classes
-HDR = *.h
+MID:=$(wildcard .src/*.mid)
+M4DEF:=$(wildcard .src/*.m4)
+IDLFILES:=$(patsubst .src/%.mid,%.idl,$(MID))
+INTERFACES:=$(IDLFILES:.idl=.h)
+CPPFILES:=$(IDLFILES:.idl=.cpp)
 
-MID:=$(wildcard *.mid)
-M4DEF:=$(wildcard *.m4)
-IDLFILES:=$(MID:.mid=.idl)
-INTERFACES:=$(MID:.mid=.h)
-CPPFILES:=$(MID:.mid=.cpp)
 include ../makeopts
 
-INSTALLTARGET=
+vpath %.mid .src
 
+%.h: %.mid
+	$(M4) -DM4FILE=.src/mid2h.m4 >$@ $<
 
+%.cpp: %.mid
+	$(M4) -DM4FILE=.src/mid2cpp.m4 >$@ $<
 
-all: interface
+%.idl: %.mid
+	$(M4) -DM4FILE=.src/mid2idl.m4 >$@ $<
+
+all:	interface
+	@true
 
 interface: $(IDLFILES) $(INTERFACES) $(CPPFILES)
 
-install: $(INSTALLTARGET)
+install:
+	@true
 
 $(IDLFILES) $(INTERFACES) $(CPPFILES): $(MID) $(M4DEF)
 
 msgcat:
 	@touch $(BUILDDIR)/imessages.po
-	@for i in *.h gui/*.h adb/*.h ; do $(XGETTEXT) -C -k_ -j -o $(BUILDDIR)/imessages.po $$i ; done
+	@set -e; for i in *.h gui/*.h adb/*.h ; \
+	do $(XGETTEXT) -C -k_ -j -o $(BUILDDIR)/imessages.po $$i ; \
+	done
 
 clean:
 	$(RM) $(IDLFILES) $(INTERFACES) $(CPPFILES)
 
-dep depend: all
-
-
 doc:
 	if [ ! -d ../doc/classes ] ; then mkdir ../doc/classes ; fi
-	$(DOCHTML) *.h || true # always succeed
+	$(DOCHTML) *.h
 
-.PHONY: clean doc dep all install msgcat interface
-
-%.h: %.mid
-	$(M4) -DM4FILE=mid2h.m4 >$(ODIR)/$@ $<
-
-%.cpp: %.mid
-	$(M4) -DM4FILE=mid2cpp.m4 >$(ODIR)/$@ $<
-
-%.idl: %.mid
-	$(M4) -DM4FILE=mid2idl.m4 >$(ODIR)/$@ $<
-
+.PHONY: clean doc all install msgcat interface
