--- a/locale/Makefile
+++ b/locale/Makefile
@@ -1,46 +1,41 @@
 # Makefile for locale directory
 # $Id$
-#
 
-#
 # Do a "make all" to update all .po files with latest strings from program
 # sources. A simple "make" will only rebuild the .mo files, not the .po ones.
-#
 
-CWD = locale
-SUB_DIRS = 
-FILES_PO:=$(wildcard *.po)
-FILES_MO:=$(FILES_PO:.po=.mo)
+FILES_PO:=$(wildcard .src/*.po)
+FILES_MO:=$(patsubst .src/%.po, %.mo, $(FILES_PO))
 
 include ../makeopts
 
-all:
-	$(MAKE) mo-files wxstd-mo-files
+vpath %.po .src
 
-mo-files: $(FILES_MO)
+%.mo: %.po
+	$(MSGFMT) -v -o $@ $<
 
-wxstd-mo-files:
-	(cd wxstd && $(MAKE) )
+all:	$(FILES_MO)
+	cd wxstd && $(MAKE)
 
 clean:
 	$(RM) $(FILES_MO) wxstd/*.mo
 
-dep depend: 
-
-
-update:
-	$(MAKE) msgcat
-	$(MAKE) mergecat
-	$(MAKE) check
+update: msgcat mergecat check
+	@true
 
 check:
 	@for i in $(FILES_PO); do echo $$i:; msgfmt -v $$i ; done
 
-install: 
-	$(MAKE) all
+install: all
 	$(INSTALL) -d $(DATADIR)/locale
-	for i in $(FILES_MO); do $(INSTALL) -d $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES; $(INSTALL_DATA) $$i $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES/M.mo; done
-	for i in wxstd/*.mo; do $(INSTALL) -d $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES; $(INSTALL_DATA) $$i $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES/wxstd.mo; done
+	set -e; for i in $(FILES_MO); \
+	do $(INSTALL) -d $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES; \
+	$(INSTALL_DATA) $$i $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES/M.mo; \
+	done
+	set -e; for i in wxstd/*.mo; \
+	do $(INSTALL) -d $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES; \
+	$(INSTALL_DATA) $$i $(DATADIR)/locale/`basename $$i .mo`/LC_MESSAGES/wxstd.mo; \
+	done
 
 msgcat:
 	$(MAKE) -C .. msgcat
@@ -51,10 +46,4 @@ mergecat:
 	cat extra_po >> messages_po
 	$(RM) tmp.po ; for i in $(FILES_PO); do msgmerge $$i messages_po -o tmp.po && mv tmp.po $$i; done
 
-.PHONY: all dep clean doc semistatic static allclean install msgcat mergecat mo-files  wxstd-mo-files update check
-
-%.mo: %.po
-	$(MSGFMT) -v -o $@ $<
-
-
-
+.PHONY:	all clean doc install msgcat mergecat update check
