--- a/src/Makefile
+++ b/src/Makefile
@@ -1,20 +1,13 @@
 # Makefile for src directory
 # $Id$
-#
 
-CWD = src
 UTILOBJ:=util/strutil.o util/sysutil.o util/miscutil.o util/upgrade.o
-SUB_DIRS =  util classes gui mail adb wx # modules
+SUB_DIRS =  util classes gui mail adb wx
 MOBJS:=$(UTILOBJ) classes/*.o gui/*.o  mail/*.o adb/*.o \
       wx/generic/*.o wx/common/*.o wx/vcard/*.o
 
 include ../makeopts
 
-ifdef USE_LEAKTRACER
-MOBJS := $(MOBJS) util/LeakTracer.o
-endif
-
-#
 # List all directories which create modules (.so files) to be installed:
 #
 MODULES_DIRS = adb
@@ -24,15 +17,16 @@ SUB_DIRS += Python
 MOBJS += Python/*.o
 endif
 
-# LeakTracer must be the last object on the linker line!
 ifeq ($(USE_MODULES), static)
 MOBJS += modules/*.o
 endif
 
+# LeakTracer must be the last object on the linker line!
+ifdef USE_LEAKTRACER
+MOBJS := $(MOBJS) util/LeakTracer.o
+endif
 
 ifeq ($(USE_MODULES),dynamic)
-# build the dynamically linked binary by default
-#all:	Mdll modules main
 all:	M modules
 else
 all:	M
@@ -40,8 +34,6 @@ endif
 
 M:	subdirs modules_obj
 	$(LINK) -o M $(MOBJS) $(LDFLAGS) $(GUI_LIBS) $(LIBS)
-
-#$(MOBJS): subdirs
 
 Mdll:	libM.so
 	$(LINK) -o M -L. $(LDFLAGS) -lM 
@@ -61,58 +53,53 @@ semistatic: modules_obj
 
 # build a (completely) statically linked binary
 static: modules_obj
-	$(LINK) -static -o M.static $(LDFLAGS) $(MOBJS) $(LIBS) -lcrypt
+	$(LINK) -static -o M.static $(LDFLAGS) $(MOBJS) $(LIBS)
 
 subdirs:
-	set -e; $(MAKE) -C ../include
 	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i all; done
 
 modules:
 	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i modules; done
-	set -e; $(MAKE) -C modules modules
+	$(MAKE) -C modules modules
 
 modules_obj:
-	set -e; $(MAKE) -C modules 
+	$(MAKE) -C modules all
 
 doc:
-	$(MAKE) -C ../include $@
+	@true
 
 clean:
 	set -e; for i in $(SUB_DIRS) modules; do $(MAKE) -C $$i $@; done
 	$(RM) core libM.so M M.static
 
-dep depend:
-	set -e; for i in $(SUB_DIRS) modules; do $(MAKE) -i -C $$i $@; done
-
 install: install-modules
-	strip M
-	$(INSTALL_PROGRAM) M $(DATADIR)/$(CANONICAL_HOST)/bin
+	$(INSTALL_PROGRAM) -s -m 555 M $(DATADIR)/$(CANONICAL_HOST)/bin
 	if test -f libM.so ; then $(INSTALL_PROGRAM) libM.so $(DATADIR)/$(CANONICAL_HOST)/lib; fi
 	$(RM) -f $(BINDIR)/M $(DATADIR)/bin/M
-	$(INSTALL) -d $(BINDIR)
-	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)
+	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/M
 	$(RM) $(BINDIR)/mahogany
 	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/mahogany
 	$(INSTALL) -d $(DATADIR)/icons
-	for i in icons/*.xpm ; do $(INSTALL_DATA) $$i $(DATADIR)/icons; done
+	for i in .src/icons/*.xpm ; \
+	do $(INSTALL_DATA) $$i $(DATADIR)/icons; \
+	done
 ifdef USE_PYTHON
 	$(MAKE) -C Python $@
 endif
 
-#
 # This must call modules-install for all modules directories:
 #
 install-modules:
 ifeq ($(USE_MODULES),dynamic)
 	for i in $(MODULES_DIRS); do $(MAKE) -C $$i $@ ; done
 	set -e; $(MAKE) -C modules install
+else
+	@true
 endif
 
 msgcat:
 	set -e; for i in $(SUB_DIRS) modules ; do $(MAKE) -C $$i $@; done
 #	$(MAKE) -C $(BUILDDIR)/locale mergecat
 
-.PHONY: all dep clean doc semistatic static allclean install msgcat subdirs install-modules modules main modules_obj
-
-
-
+.PHONY:	all clean doc semistatic static allclean install msgcat \
+	subdirs install-modules modules main modules_obj
