--- a/src/Python/Makefile
+++ b/src/Python/Makefile
@@ -1,25 +1,44 @@
 # Makefile for src/Python directory
-#
 # $Id$
-#
-# For all targets apart from clean, it will call the
-# Makefile2 which includes the usual standard rules.
-# This is needed to avoid warnings.
-
-all:
-	@$(MAKE) -f Makefile2 $@
-
-clean:
-	$(RM) *.o *.so *.pyc *.html *.doc junk $(CPPTARGETS) Minit.py
-	ln -s INIT/Minit.py .
-
-%.cpp: %.i
-	$(SWIG) $(SWIGFLAGS) -o $(ODIR)/$@ $<
-
-%: force
-	@$(MAKE) -f Makefile2 $@
-force: ;
-
-.PHONY: clean
 
 include ../../makeopts
+
+CPPFLAGS:=$(CPPFLAGS) -DSWIG_GLOBAL
+CXXFLAGS:=$(CXXFLAGS_RELAXED)
+
+SWIGSRC = MAppBase.i MailFolder.i MString.i MProfile.i Message.i\
+	MObject.i #SendMessageCC.i
+CPPSRC = InitPython.cpp PythonHelp.cpp
+
+CPPTARGETS := $(SWIGSRC:.i=.cpp) swiglib.cpp
+PYTARGETS  := $(SWIGSRC:.i=.py)
+
+OBJECTS    := $(CPPTARGETS:.cpp=.o) $(CPPSRC:.cpp=.o)
+
+all:	$(OBJECTS) $(PYTARGETS)
+	@true
+
+include ../../makerules $(wildcard *.d)
+
+ifdef USE_SWIG
+swiglib.cpp: swiglib.i
+	$(SWIG) $(SWIGFLAGS_LIBSWIG) -o $@ $<
+endif
+
+install:
+	$(INSTALL) -d $(DATADIR)/scripts
+	for i in *.py .src/Scripts/*.py; \
+	do $(INSTALL_DATA) $$i $(DATADIR)/scripts; \
+	done
+	$(INSTALL) -d $(DOCDIR)/Python
+	touch dummy.html
+	for i in *.html; \
+	do $(INSTALL_DATA) $$i $(DOCDIR)/Python; \
+	done
+	$(RM) $(DATADIR)/scripts/dummy.py $(DOCDIR)/Python/dummy.html
+
+clean:	stdclean
+	$(RM) *.pyc *.html *.doc junk $(CPPTARGETS) Minit.py
+	#??? ln -s INIT/Minit.py .
+
+.PHONY: mkswig all install clean
