--- a/src/mail/Makefile
+++ b/src/mail/Makefile
@@ -1,39 +1,33 @@
 # Makefile for src/mail directory
 
-CWD = mail
+include ../../makeopts
+
 SRC = MailFolder.cpp Message.cpp MailFolderCC.cpp MessageCC.cpp \
 SendMessageCC.cpp ASMailFolder.cpp MailMH.cpp HeaderInfoImpl.cpp
-
-include ../../makeopts
 
 ifdef EXPERIMENTAL
 #commenting out for now as it doesn't do anything and gives tons of warnings
 #SRC += MMailFolder.cpp
 endif
 
-HDR = $(SRC:.cpp=.h)
-DEP = $(SRC:.cpp=.d)
 OBJ = $(SRC:.cpp=.o)
 
+all:	$(OBJ)
+	@true
 
+include ../../makerules $(wildcard *.d)
+
+### this part may not work any more...
 LINK = ../util/strutil.o ../classes/CommonBase.o $(CCLIENTLIB)
-
-TARGETS = $(OBJ)
-
-all:	$(TARGETS)
 
 MailFolderCC: MailFolderCC.o MailFolder.o MessageCC.o $(LINK)
 	$(CXX) -o $@ $^
 
 $(LINK):
-	(cd ../util; make all)
-	(cd ../classes; make all)
-	(cd $(CCLIENTDIR); make $(CCCLIENTOSTYPE))
-
+	cd ../util; make all
+	cd ../classes; make all
+	cd $(CCLIENTDIR); make $(CCCLIENTOSTYPE)
 
 clean: stdclean
 
 .PHONY: clean
-
-include ../../makerules
-include .depend
