--- a/src/wx/Makefile
+++ b/src/wx/Makefile
@@ -6,4 +6,6 @@ SUBDIRS=generic common vcard
 all clean msgcat:
 	set -e; for i in $(SUBDIRS); do $(MAKE) -C $$i $@; done
 
+modules:
+
 .PHONY: clean all msgcat
